--- a/flutter1/pubspec.yaml
+++ b/flutter1/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  fluttertoast: ^7.1.4
 
 
   # The following adds the Cupertino Icons font to your application.
